# interlude

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: Makefile  build_shaders.ps1
assets/engine/fonts/: files.txt
assets/engine/shaders/: DebugInfoF.frag  DebugInfoV.vert  PostProcessVertex.vert  PostProcessVertexNoUV.vert
assets/examples/icosphere/: frag.frag  vert.vert
assets/examples/triangle/: frag.frag  vert.vert
examples/: basic.rs  icosphere_wire.rs  triangle.rs
src/: command.rs  concurrent.rs  data.rs  debug_info.rs  descriptor.rs  device.rs  engine.rs  error.rs  framebuffer.rs  ginterface.rs  input.rs  internal_traits.rs  lib.rs  render_surface.rs  resource.rs  shading.rs  subsystem_layer.rs  synchronize.rs  tuple_tools.rs  window.rs  window_common.rs
src/container/: mod.rs
src/linux/: evdev.rs  input.rs  mod.rs  udev.rs  vk_wsi.rs  window.rs
src/ogl/: ffi.rs  mod.rs
src/vk/: defaults.rs  enums.rs  functions.rs  iex.rs  mod.rs  structs.rs  traits.rs  wrap.rs
src/vk/ffi/: enums.rs  functions.rs  macros.rs  mod.rs  structs.rs  types.rs
src/vkold/: defaults.rs  enums.rs  macros.rs  mod.rs  objects.rs  structs.rs  traits.rs  types.rs
src/win32/: bstr.rs  input.rs  mod.rs  window.rs  wsi.rs
src/wsi/: mod.rs  target_win32.rs  target_xlib.rs
vk/defs/: Cargo.toml  append_struct_template.sh  make_extension.sh
vk/defs/src/: acquire_xlib_display_ext.rs  android_surface_khr.rs  blend_operation_advanced_ext.rs  clip_space_w_scaling_nv.rs  debug_marker_ext.rs  debug_report_ext.rs  dedicated_allocation_khr.rs  dedicated_allocation_nv.rs  descriptor_update_template_khr.rs  device_generated_commands_nvx.rs  device_group_creation_khx.rs  device_group_khx.rs  direct_mode_display_ext.rs  discard_rectangles_ext.rs  display_control_ext.rs  display_khr.rs  display_surface_counter_ext.rs  display_swapchain_khr.rs  display_timing_google.rs  draw_indirect_count_amd.rs  external_fence_capabilities_khr.rs  external_fence_fd_khr.rs  external_fence_khr.rs  external_fence_win32_khr.rs  external_memory_capabilities_khr.rs  external_memory_capabilities_nv.rs  external_memory_fd_khr.rs  external_memory_khr.rs  external_memory_nv.rs  external_memory_win32_khr.rs  external_memory_win32_nv.rs  external_semaphore_capabilities_khr.rs  external_semaphore_fd_khr.rs  external_semaphore_khr.rs  external_semaphore_win32_khr.rs  fill_rectangle_nv.rs  filter_cubic_img.rs  format_pvrtc_img.rs  fragment_coverage_to_color_nv.rs  framebuffer_mixed_samples_nv.rs  (+46 more)
vk/funport/: Cargo.toml
vk/funport/src/: lib.rs
