[package]
name = "interlude"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[features]
container = []

[dependencies]
libc = "0.2.*"
log = "0.3.6"
freetype-sys = "0.4.0"
unicode-normalization = "0.1.2"
nalgebra = "0.10.1"
ansi_term = "0.9.0"
thread-scoped = "1.0.1"
time = "0.1.35"
mio = "0.6.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
widestring = "0.2.2"
ole32-sys = "0.2.0"

[target.'cfg(all(unix, not(feature = "container")))'.dependencies]
xcb = "0.7.6"
