[package]
name = "interlude"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
build = "build.rs"

[features]
default = ["interlude-vk-funport/VK_KHR_surface", "interlude-vk-funport/VK_KHR_swapchain", "interlude-vk-funport/VK_EXT_debug_report"]
target_xlib = ["interlude-vk-funport/VK_KHR_xlib_surface", "x11"]
target_win32 = ["interlude-vk-funport/VK_KHR_win32_surface"]
debugprint = ["freetype-sys"]

[dependencies]
libc = "0.2.*"
log = "0.3.6"
freetype-sys = { version = "0.4.0", optional = true }
unicode-normalization = "0.1.4"
nalgebra = "^0.12"
ansi_term = "0.9.0"
thread-scoped = "1.0.1"
time = "0.1.35"
mio = "0.6.3"
interlude-vk-defs = { path = "vk/defs" }
interlude-vk-funport = { path = "vk/funport" }
x11 = { version = "^2.14", optional = true }

[dev-dependencies]
alga = "^0.5"

[target."cfg(windows)".dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
widestring = "0.2.2"
ole32-sys = "0.2.0"
