[package]
name = "interlude-vk-defs"
description = "Interlude: Vulkan Definitions"
version = "1.0.54"
authors = ["S.Percentage"]

[features]
VK_KHR_surface = []
VK_KHR_swapchain = []
VK_KHR_display = []
VK_KHR_display_swapchain = []
VK_KHR_xlib_surface = ["xlib"]
VK_KHR_xcb_surface = ["xcb"]
VK_KHR_wayland_surface = ["wayland-client"]
VK_KHR_android_surface = ["android_ffi"]
VK_KHR_win32_surface = ["winapi"]
VK_KHR_sampler_mirror_clamp_to_edge = []
VK_KHR_get_physical_device_properties2 = []
VK_KHR_shader_draw_parameters = []
VK_KHR_maintenance1 = []
VK_KHR_external_memory_capabilities = []
VK_KHR_external_memory = []
VK_KHR_external_memory_win32 = ["winapi"]
VK_KHR_external_memory_fd = []
VK_KHR_win32_keyed_mutex = []
VK_KHR_external_semaphore_capabilities = []
VK_KHR_external_semaphore = []
VK_KHR_external_semaphore_win32 = ["winapi"]
VK_KHR_external_semaphore_fd = []
VK_KHR_push_descriptor = []
VK_KHR_16bit_storage = []
VK_KHR_incremental_present = []
VK_KHR_descriptor_update_template = []
VK_KHR_shared_presentable_image = []
VK_KHR_external_fence_capabilities = []
VK_KHR_external_fence = []
VK_KHR_external_fence_win32 = ["winapi"]
VK_KHR_external_fence_fd = []
VK_KHR_get_surface_capabilities2 = []
VK_KHR_variable_pointers = []
VK_KHR_dedicated_allocation = []
VK_KHR_storage_buffer_storage_class = []
VK_KHR_get_memory_requirements2 = []
VK_EXT_debug_report = []
VK_NV_glsl_shader = []
VK_IMG_filter_cubic = []
VK_AMD_rasterization_order = []
VK_AMD_shader_trinary_minmax = []
VK_AMD_shader_explicit_vertex_parameter = []
VK_EXT_debug_marker = []
VK_AMD_gcn_shader = []
VK_NV_dedicated_allocation = []
VK_AMD_draw_indirect_count = []
VK_AMD_negative_viewport_height = []
VK_AMD_gpu_shader_half_float = []
VK_AMD_shader_ballot = []
VK_AMD_texture_gather_bias_lod = []
VK_KHX_multiview = []
VK_IMG_format_pvrtc = []
VK_NV_external_memory_capabilities = []
VK_NV_external_memory = []
VK_NV_external_memory_win32 = ["winapi"]
VK_NV_win32_keyed_mutex = []
VK_KHX_device_group = []
VK_EXT_validation_flags = []
VK_NN_vi_surface = []
VK_EXT_shader_group_ballot = []
VK_EXT_shader_subgroup_vote = []
VK_KHX_device_group_creation = []

[dependencies]
libc = "0.2"
xlib = { version = "~0.0", optional = true }
xcb = { version = "~0.8", optional = true }
wayland-client = { version = "~0.9", optional = true }
android_ffi = { version = "~0.1", optional = true }
winapi = { version = "~0.2", optional = true }
