[package]
name = "interlude-vk-funport"
description = "Interlude: Vulkan Function Ports"
version = "1.0.55"
authors = ["S.Percentage"]

[dependencies]
libc = "0.2"
interlude-vk-defs = { path = "../defs" }

[features]
VK_KHR_surface = ["interlude-vk-defs/VK_KHR_surface"]
VK_KHR_swapchain = ["interlude-vk-defs/VK_KHR_swapchain"]
VK_KHR_display = ["interlude-vk-defs/VK_KHR_display"]
VK_KHR_display_swapchain = ["interlude-vk-defs/VK_KHR_display_swapchain"]
VK_KHR_xlib_surface = ["interlude-vk-defs/VK_KHR_xlib_surface"]
VK_KHR_xcb_surface = ["interlude-vk-defs/VK_KHR_xcb_surface"]
VK_KHR_wayland_surface = ["interlude-vk-defs/VK_KHR_wayland_surface"]
VK_KHR_android_surface = ["interlude-vk-defs/VK_KHR_android_surface"]
VK_KHR_win32_surface = ["interlude-vk-defs/VK_KHR_win32_surface"]
VK_KHR_get_physical_device_properties2 = ["interlude-vk-defs/VK_KHR_get_physical_device_properties2"]
VK_KHR_maintenance1 = ["interlude-vk-defs/VK_KHR_maintenance1"]
VK_KHR_external_memory_capabilities = ["interlude-vk-defs/VK_KHR_external_memory_capabilities"]
VK_KHR_external_memory_win32 = ["interlude-vk-defs/VK_KHR_external_memory_win32"]
VK_KHR_external_memory_fd = ["interlude-vk-defs/VK_KHR_external_memory_fd"]
VK_KHR_external_semaphore_capabilities = ["interlude-vk-defs/VK_KHR_external_semaphore_capabilities"]
VK_KHR_external_semaphore_win32 = ["interlude-vk-defs/VK_KHR_external_semaphore_win32"]
VK_KHR_external_semaphore_fd = ["interlude-vk-defs/VK_KHR_external_semaphore_fd"]
VK_KHR_push_descriptor = ["interlude-vk-defs/VK_KHR_push_descriptor"]
VK_KHR_descriptor_update_template = ["interlude-vk-defs/VK_KHR_descriptor_update_template"]
VK_KHR_shared_presentable_image = ["interlude-vk-defs/VK_KHR_shared_presentable_image"]
VK_KHR_external_fence_capabilities = ["interlude-vk-defs/VK_KHR_external_fence_capabilities"]
VK_KHR_external_fence_win32 = ["interlude-vk-defs/VK_KHR_external_fence_win32"]
VK_KHR_external_fence_fd = ["interlude-vk-defs/VK_KHR_external_fence_fd"]
VK_KHR_get_surface_capabilities2 = ["interlude-vk-defs/VK_KHR_get_surface_capabilities2"]
VK_KHR_get_memory_requirements2 = ["interlude-vk-defs/VK_KHR_get_memory_requirements2"]
VK_EXT_debug_report = ["interlude-vk-defs/VK_EXT_debug_report"]
VK_EXT_debug_marker = ["interlude-vk-defs/VK_EXT_debug_marker"]
VK_AMD_draw_indirect_count = ["interlude-vk-defs/VK_AMD_draw_indirect_count"]
VK_NV_external_memory_capabilities = ["interlude-vk-defs/VK_KHR_external_memory_capabilities"]
VK_NV_external_memory_win32 = ["interlude-vk-defs/VK_NV_external_memory_win32"]
VK_KHX_device_group = ["interlude-vk-defs/VK_KHX_device_group"]
VK_NN_vi_surface = ["interlude-vk-defs/VK_NN_vi_surface"]
VK_KHX_device_group_creation = ["interlude-vk-defs/VK_KHX_device_group_creation"]
VK_NVX_device_generated_commands = ["interlude-vk-defs/VK_NVX_device_generated_commands"]
VK_NV_clip_space_w_scaling = ["interlude-vk-defs/VK_NV_clip_space_w_scaling"]
VK_EXT_discard_rectangles = ["interlude-vk-defs/VK_EXT_discard_rectangles"]
VK_EXT_direct_mode_display = ["interlude-vk-defs/VK_EXT_direct_mode_display"]
VK_EXT_acquire_xlib_display = ["interlude-vk-defs/VK_EXT_acquire_xlib_display"]
VK_EXT_display_surface_counter = ["interlude-vk-defs/VK_EXT_display_surface_counter"]
VK_EXT_display_control = ["interlude-vk-defs/VK_EXT_display_control"]
VK_GOOGLE_display_timing = ["interlude-vk-defs/VK_GOOGLE_display_timing"]
VK_EXT_hdr_metadata = ["interlude-vk-defs/VK_EXT_hdr_metadata"]
VK_MVK_ios_surface = ["interlude-vk-defs/VK_MVK_ios_surface"]
VK_MVK_macos_surface = ["interlude-vk-defs/VK_MVK_macos_surface"]
